# Ontario-electricity-price-forecasting

./: .dockerignore  .gitignore  Dockerfile  README.md  artifacts.dvc  data.dvc  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  ci_cd.yml
api/: main.py  schemas.py
artifacts/model/: gru_h1.pt  gru_h2.pt  gru_h3.pt
artifacts/scalers/: scaler_X.pkl  scaler_y.pkl
notebooks/: 01_data_ingestion.ipynb  02_data_merging_and_eda.ipynb  03_feature_engineering.ipynb  04_statistical_models.ipynb  05_ml_models.ipynb  06_dl_models.ipynb  07_comparison_with_IESO.ipynb
results/: final evaluation comparison.docx  gru_preds.pkl
scripts/: export_champion.py
src/: config.py  model.py  predict.py  preprocess.py  train.py
tests/: test_api.py  test_predict.py
