[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoep-forecasting"
version = "0.1.0"
description = "GRU-based forecasting of Ontario hourly electricity prices"
requires-python = ">=3.10"
dependencies = [
   "torch",
    "numpy",
    "scikit-learn",
    "joblib",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]