[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoep-forecasting"
version = "0.1.0"
description = "GRU-based forecasting of Ontario hourly electricity prices"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
    "torch",
    "fastapi",
    "uvicorn",
    "mlflow"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "dvc",
    "dvc[gs]"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]